# ETIA-Framework

./: .env example  .gitignore  README.md  config.py  main.py  pyproject.toml
notebooks/: ETIAS_notebook.ipynb
plotting/: plotting.py
src/: etias_metrics.py  evaluation.py  head_detection.py  utils.py
